--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -5,25 +5,16 @@
                 <mat-form-field appearance="outline" class="w-full">
                     <mat-label>Email</mat-label>
                     <input matInput placeholder="john.doe@example.com" formControlName="email" required />
-                    <mat-error i18n *ngIf="email?.hasError('required') && (email?.touched || email?.dirty)">
-                        Email is required.
-                    </mat-error>
-                    <mat-error i18n *ngIf="email?.hasError('email') && (email?.touched || email?.dirty)">
-                        Email is invalid.
+                    <mat-error *ngIf="email?.touched || email?.dirty">
+                        {{ getEmailErrorMessage() }}
                     </mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline" class="w-full">
                     <mat-label i18n>Password</mat-label>
                     <input matInput type="password" placeholder="**********" formControlName="password" required />
-                    <mat-error i18n *ngIf="password?.hasError('required') && (password?.touched || password?.dirty)">
-                        Password is required.
-                    </mat-error>
-                    <mat-error i18n *ngIf="password?.hasError('minlength') && (password?.touched || password?.dirty)">
-                        Password must be at least 10 characters.
-                    </mat-error>
-                    <mat-error i18n *ngIf="password?.hasError('pattern') && (password?.touched || password?.dirty)">
-                        Password must contain at least one letter and one number.
+                    <mat-error *ngIf="password?.touched || password?.dirty">
+                        {{ getPasswordErrorMessage() }}
                     </mat-error>
                 </mat-form-field>
 
